--- a/app/index.html
+++ b/app/index.html
@@ -24,43 +24,44 @@
 
 
         <div class="container">
-            <div class="header">
-                <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <h3 class="text-muted">labby</h3>
-            </div>
-
-
-            <div class="map">
-              <div class="map-chrome">
-                <div class="map-surface">
-                  <div class="row">
-                    <div class="square" data-pos-x="0" data-pos-y="0"></div>
-                    <div class="square" data-pos-x="1" data-pos-y="0"></div>
-                    <div class="square" data-pos-x="2" data-pos-y="0"></div>
-                  </div>
-                  <div class="row">
-                    <div class="square" data-pos-x="1" data-pos-y="1"></div>
-                    <div class="square" data-pos-x="1" data-pos-y="1"></div>
-                    <div class="square" data-pos-x="1" data-pos-y="1"></div>
-                  </div>
-                  <div class="row">
-                    <div class="square" data-pos-x="2" data-pos-y="2"></div>
-                    <div class="square" data-pos-x="2" data-pos-y="2"></div>
-                    <div class="square" data-pos-x="2" data-pos-y="2"></div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-
+          <div class="header">
+              <ul class="nav nav-pills pull-right">
+                  <li class="active"><a href="#">Play</a></li>
+                  <li><a href="#">About</a></li>
+              </ul>
+              <h3 class="text-muted">Labby</h3>
+          </div>
         </div>
 
+        <div class="container">
+          <form id="welcome-menu" role="form">
+            <fieldset>
+              <div class="form-group">
+                <input type="text" class="form-control input-lg" id="player-name" placeholder="Player Wan Kenobi">
+              </div>
 
+              <div class="form-group">
+                <label for="select-stage" class="col-sm-2 control-label">Select stage</label>
+                <select class="form-control input-lg" id="select-stage">
+                  <option value="stage1">Stage 1</option>
+                  <option value="stage2">Stage 2</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn btn-lg btn-primary btn-block">Start</button>
+              </div>
+            </fieldset>
+          </form>
+        </div>
 
+        <div class="container">
+          <div class="map">
+            <div class="map-chrome">
+              <div class="map-surface">
+              </div>
+            </div>
+          </div>
+        </div>
 
         <!-- build:js scripts/main.js -->
         <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
