sugar for view map

--- a/app/index.html
+++ b/app/index.html
@@ -54,8 +54,9 @@
             <div class="form-group">
               <select class="form-control input-lg" id="select-stage">
                 <option selected disabled>Select stage</option>
-                <option value="stage1">Stage 1</option>
-                <option value="stage2">Stage 2</option>
+                <option value="stage1">Stage 1 (2 players)</option>
+                <option value="stage2">Stage 2 ( 2 players)</option>
+                <option disabled>Stage 3 (4 players)</option>
               </select>
             </div>
           </div>
