--- a/app/index.html
+++ b/app/index.html
@@ -51,11 +51,10 @@
 
         <div id="menu" class="container"></div>
 
-        <div class="container">
-          <div class="map">
+        <div id="game" class="container">
+          <div id="map">
             <div class="map-chrome">
-              <div class="map-surface">
-              </div>
+              <div class="map-surface"></div>
             </div>
           </div>
         </div>
