added hud view and template -- prevents default form validation to avoid page reload

--- a/app/index.html
+++ b/app/index.html
@@ -52,10 +52,7 @@
         <div id="menu" class="container"></div>
 
         <div id="game" class="container">
-          <div id="map">
-            <div class="map-chrome">
-              <div class="map-surface"></div>
-            </div>
+          <div id="hud">
           </div>
         </div>
 
