added style for move-candidate -- clicking on move action will now show move candidates -- clicking on move candidates is now ready to move players

--- a/app/index.html
+++ b/app/index.html
@@ -44,9 +44,7 @@
         </div>
 
         <div class="container">
-          Players connected:
-          <p class="player-list">
-          </p>
+          Players connected: <span class="player-list">0</span>
         </div>
 
         <div id="menu" class="container"></div>
